# core-graphics

./: .clang-format  CMakeLists.txt
cmake/: sfml.cmake
resources/shaders/: default.frag  default.vert
src/: main.cpp  minimal.cpp  shader.cpp  shader.h  utils.cpp  utils.h  vertex_buffer_object.cpp  vertex_buffer_object.h
